--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GUDLFT Registration</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
+
 </head>
 <body>
+
+{% with messages = get_flashed_messages() %}
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-danger" role="alert">
+                   {{ message }}
+                </div>
+
+                    {{ message }}
+
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+
     <h1>Welcome to the GUDLFT Registration Portal!</h1>
     Please enter your secretary email to continue:
     <form action="showSummary" method="post">
@@ -12,5 +30,6 @@
         <input type="email" name="email" id=""/>
         <button type="submit">Enter</button>
     </form>
+
 </body>
 </html>
